--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -2,15 +2,17 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  width: 40%; /* smaller container */
+  width: 40%;
   background-color: var(--white);
-  padding: 0.25rem; /* smaller padding */
+  padding: 0.25rem;
+  margin: 10px 10px;
   border-radius: 0.5rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  border: 1px solid #ddd; 
 }
 
 .search-input-wrapper {
-  flex: 1; /* input takes remaining space */
+  flex: 1;
 }
 
 .search-input-wrapper input {
@@ -24,7 +26,6 @@
   color: var(--dark);
 }
 
-/* Shared button styles */
 .button {
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
@@ -34,7 +35,7 @@
   cursor: pointer;
   color: var(--white);
   transition: background-color 0.2s;
-  flex-shrink: 0; /* prevent buttons from shrinking */
+  flex-shrink: 0;
 }
 
 .search-button {
@@ -44,17 +45,9 @@
   background-color: #010f8cff;
 }
 
-.save-button {
-  background-color: #28a745;
-}
-.save-button:hover { background-color: #218838; }
-
-.update-button {
-  background-color: #ffc107;
-}
-.update-button:hover { background-color: #e0a800; }
-
 .new-button {
   background-color: var(--secondary);
 }
-.new-button:hover { background-color: #5a6268; }
+.new-button:hover {
+  background-color: #5a6268;
+}
