--- a/src/components/Home/Current_Month_Status/Current_Month_Status.css
+++ b/src/components/Home/Current_Month_Status/Current_Month_Status.css
@@ -56,8 +56,7 @@
 
 
 .status-header {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 12px;
+  margin: 0;
+  font-size: 1.2rem;
   color: #333;
 }
