--- a/src/components/Employee/User_Profile/User_Profile.css
+++ b/src/components/Employee/User_Profile/User_Profile.css
@@ -1,9 +1,9 @@
 /* Reusable Container Title */
 .container-title {
-  font-size: 1.2rem;
+  font-size: 51.2rem;
   font-weight: 600;
   color: #0115a9;
-  margin: 0 0 12px 0;
+  margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
